--- a/NAT_data.ipynb
+++ b/NAT_data.ipynb
@@ -27,33 +27,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"/disk/haohy/nlp/ppdb-2.0-s-all\""
+    "data_path = \"D:\\\\datasets\\\\Paraphrasing\\\\Para-nmt\\\\para-nmt-5m-processed\\\\para-nmt-5m-processed.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize_en(text):\n",
+    "    \"\"\"\n",
+    "    Tokenizes English text from a string into a list of strings\n",
+    "    \"\"\"\n",
+    "    return [tok.text for tok in spacy_en.tokenizer(text)]\n",
+    "\n",
+    "SRC = Field(tokenize = tokenize_en, \n",
+    "            init_token = '<sos>', \n",
+    "            eos_token = '<eos>', \n",
+    "            lower = True)\n",
+    "\n",
+    "TRG = Field(tokenize = tokenize_en, \n",
+    "            init_token = '<sos>', \n",
+    "            eos_token = '<eos>', \n",
+    "            lower = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Field??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/disk/haohy/nlp/ppdb-2.0-s-all'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a049e62c79e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mdata_all\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/disk/haohy/nlp/ppdb-2.0-s-all'"
-     ]
+     "data": {
+      "text/plain": [
+       "['“ why not ?', '`` why not ?']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(data_path, 'rb') as f:\n",
-    "    data_all = f.readlines()"
+    "data_all[4].strip().split('\\t')"
    ]
   },
   {
@@ -61,9 +91,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -82,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
